# synoptic

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  prod_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
app/app/: settings.py  urls.py
app/locale/en/LC_MESSAGES/: django.mo  django.po
app/locale/kh/LC_MESSAGES/: django.mo  django.po
app/manager/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
app/public/: tests.py  urls.py  views.py  weatherapi.py
app/public/templatetags/: unix_time.py
app/sensor/: admin.py  models.py  views.py
app/static/: add_sensor.js  add_water_reading.js  leaflet.js
app/static/css/: large.css
app/static/public/js/: alert_map.js  weather_map.js
app/template/: add_sensor.html  admin_login.html  base.html  init.html
app/template/manager/: add_sensor.html  add_water_reading.html  admin_login.html  dashboard.html
app/template/partial/: alert_graph.html  manager_graph.html  weather_daily.html  weather_weekly.html
app/template/public/: alert.html  home.html  nav.html  our-goals.html  settings.html  weather.html
